Funcionalidad para obtener listado, arreglar estilos

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './assets/sass/colors.scss';
 .App {
-    height: 100vh;
+    height: 100%;
     background-color: $dark;
+    margin-bottom: 50px;
 }
