--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
     width: 100%;
     color: $dark;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     height: 50px;
     background-color: $medium;
