--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -5,7 +5,11 @@
         flex-direction: row;
         justify-content: space-between;
         .movie-estadist-bloque {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             margin-top: 1em;
+            padding: 0.3em;
             text-align: center;
             width: 33%;
         }
