añadir busquedas por diferentes criterios

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,9 @@
 @import '../../assets/sass/colors.scss';
 .header {
+    .list {}
+    .active {
+        color: $dark;
+    }
     .navbar-input {
         width: 100% !important;
         border-radius: 0.5em;
